--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -546,6 +546,7 @@
                 setTimeout(function(){
                     $("#"+alertDivId).html("");
                 }, 5000);
+                genResultList('previousdatapanel');
             });
         });
      }
