--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -773,23 +773,26 @@
         </td>
         <td><textarea id="json2jsondsl_template" style="width:400px;height:300px;">{
          def idx = 0
-         def parse = &$payload.views[-1].annotations.features[0].penntree
-         def coref = &$payload.views[-1].annotations.select{&.@type=="http://vocab.lappsgrid.org/Coreference"}.features.mentions
-         def markables = &$payload.views[-1].annotations.select{&.@type=="http://vocab.lappsgrid.org/Markable" && coref.toString().contains(&.id)}
+         def lastview = &$payload.views[-1]
+         def lastviewanns = lastview==null?null:lastview.annotations
+         def lastviewfeatures = lastviewanns==null?null:lastviewanns.features
+         def parse = lastviewfeatures == null? null:lastviewfeatures.select{&.penntree!=null}.penntree
+         def coref = lastviewanns.select{&."type" != null && &."type".contains("Coreference")}.features.mentions
+         def markables = lastviewanns.select{&."type" != null && &."type".contains("Markable") && coref.toString().contains(&.id)}
 
-         text &$payload.text."@value" + (parse == null?"":"\n\n\n"+parse)
+         text &$payload.text."@value" +  (parse == null||parse.length == 0||parse[0]==null?"":"\n\n\n"+parse[0])
 
-         relations (&$payload.views[-1].annotations.select{&.@type=="http://vocab.lappsgrid.org/DependencyStructure"}.features.dependencies
+         relations (lastviewanns.select{&."type" != null && &."type".contains("DependencyStructure")}.features.dependencies
                     .flatten().foreach{
                     ["D${idx++}", &.label, [["Governor", &.features.governor], ["Dependent", &.features.dependent]]]
                     })
 
-         equivs (&$payload.views[-1].annotations.select{&.@type=="http://vocab.lappsgrid.org/Coreference"}.features
+         equivs (lastviewanns.select{&."type" != null && &."type".contains("Coreference")}.features
                     .flatten().foreach{
                                      ["*", "Coreference", &.mentions[0], &.mentions[1]]
                                      })
 
-         entities (&$payload.views[-1].annotations.unique{&.start+" "+&.end}.select{&.features != null && (&.features.category != null || &.features.pos != null)}.foreach{
+         entities (lastviewanns.unique{&.start+" "+&.end}.select{&.features != null && (&.features.category != null || &.features.pos != null)}.foreach{
            [&.id == null?"T${idx++}":&.id, &.features.category != null?&.features.category.trim().toUpperCase():&.features.pos.trim().toUpperCase(), [[&.start.toInteger(), &.end.toInteger()]]]
          } + markables.foreach{
            [&.id == null?"M${idx++}":&.id, "Mention", [[&.start.toInteger(), &.end.toInteger()]]]
