--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -777,17 +777,17 @@
          def lastviewanns = lastview==null?null:lastview.annotations
          def lastviewfeatures = lastviewanns==null?null:lastviewanns.features
          def parse = lastviewfeatures == null? null:lastviewfeatures.select{&.penntree!=null}.penntree
-         def coref = lastviewanns.select{&."type" != null && &."type".contains("Coreference")}.features.mentions
-         def markables = lastviewanns.select{&."type" != null && &."type".contains("Markable") && coref.toString().contains(&.id)}
+         def coref = lastviewanns.select{&."@type" != null && &."@type".contains("Coreference")}.features.mentions
+         def markables = lastviewanns.select{&."@type" != null && &."@type".contains("Markable") && coref.toString().contains(&.id)}
 
-         text &$payload.text."@value" +  (parse == null||parse.length == 0||parse[0]==null?"":"\n\n\n"+parse[0])
+         text &$payload.text."@value" +  (parse == null||parse.size == 0||parse[0]==null?"":"\n\n\n"+parse[0])
 
-         relations (lastviewanns.select{&."type" != null && &."type".contains("DependencyStructure")}.features.dependencies
+         relations (lastviewanns.select{&."@type" != null && &."@type".contains("DependencyStructure")}.features.dependencies
                     .flatten().foreach{
                     ["D${idx++}", &.label, [["Governor", &.features.governor], ["Dependent", &.features.dependent]]]
                     })
 
-         equivs (lastviewanns.select{&."type" != null && &."type".contains("Coreference")}.features
+         equivs (lastviewanns.select{&."@type" != null && &."@type".contains("Coreference")}.features
                     .flatten().foreach{
                                      ["*", "Coreference", &.mentions[0], &.mentions[1]]
                                      })
